[gd_scene load_steps=3 format=2]

[ext_resource path="res://Styles/style1.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/Pages/GlobalVariablesMenu/VariablesMenu.gd" type="Script" id=2]

[node name="VariablesMenu2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
modulate = Color( 0.203922, 0.196078, 0.192157, 1 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
margin_top = 15.0
margin_right = 970.0
margin_bottom = 35.0
size_flags_horizontal = 3
text = "Global Variables: "
align = 2
valign = 1

[node name="ExitBtn" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
margin_left = 974.0
margin_right = 1024.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
text = "  X  "

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 54.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AddVarBtn" type="Button" parent="CanvasLayer/VBoxContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "+"

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/VBoxContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 1024.0
margin_bottom = 546.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VarContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer/VBoxContainer/ScrollContainer"]
margin_right = 1024.0
margin_bottom = 502.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="button_down" from="CanvasLayer/VBoxContainer/HBoxContainer2/ExitBtn" to="." method="_on_ExitBtn_button_down"]
[connection signal="button_down" from="CanvasLayer/VBoxContainer/VBoxContainer/AddVarBtn" to="." method="_on_AddVarBtn_button_down"]
